Grace/tests/gibbs/errors/t298.grace
// ERROR = P1018
var pokemon := ["Pikachu", "Raichu", .]
